--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
-    {
-      "src": "api/index.py",
-      "use": "@vercel/python"
-    }
+      {
+          "src":"app.py",
+          "use":"@vercel/python"
+      }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.py"
-    }
+      {
+          "src":"/(.*)", 
+          "dest":"app.py"
+      }
   ]
-}
+} 
